Fix preview bar overflow style

--- a/public/content.css
+++ b/public/content.css
@@ -12,15 +12,12 @@
 }
 
 #previewbar {
-    overflow: visible;
+    overflow: hidden;
     padding: 0;
     margin: 0;
     position: absolute;
     width: 100%;
-	pointer-events: none;
-
 	height: 100%;
-	transform: scaleY(0.6) translateY(-30%) translateY(1.5px);
 	z-index: 1;
 
 	transition: transform .1s cubic-bezier(0,0,0.2,1);
